[gd_scene load_steps=17 format=2]

[ext_resource path="res://Source/Levels/Intro/Intro.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/map/intro.png" type="Texture" id=2]
[ext_resource path="res://Source/Tiles/tile_intro2.png" type="Texture" id=3]
[ext_resource path="res://Source/Tiles/tile03.png" type="Texture" id=4]
[ext_resource path="res://Source/HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Source/LevelObjects/LargeCandle.tscn" type="PackedScene" id=6]
[ext_resource path="res://Source/Player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Sprites/map/intro_.png" type="Texture" id=8]
[ext_resource path="res://Source/Levels/Intro/VampireKiller_Stage1.wav" type="AudioStream" id=9]
[ext_resource path="res://Source/Levels/Intro/FinalIntroEntryCastle.wav" type="AudioStream" id=10]
[ext_resource path="res://Source/Levels/Level1/Tiles/bk.png" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=7]
0/name = "tile_intro2.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 6 )
0/shape_one_way = true
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tile03.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 5 )
1/shape_one_way = true
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "bk.png 2"
2/texture = ExtResource( 11 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 9 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 33, 10 )

[node name="Intro" type="Node2D"]
script = ExtResource( 1 )

[node name="Stage1OST" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="CastleSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Intro" type="Sprite" parent="."]
position = Vector2( 0, 145 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 277 )
tile_set = SubResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 1
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
show_collision = true
collision_layer = 8
collision_mask = 5
format = 1
tile_data = PoolIntArray( -196609, 2, 0, -262050, 2, 0, -131073, 2, 0, -196514, 2, 0, -65537, 2, 0, -130978, 2, 0, -1, 2, 0, -65442, 2, 0, 65535, 2, 0, 94, 2, 0, 131071, 2, 0, 65630, 2, 0, 196607, 2, 0, 131166, 2, 0, 262143, 2, 0, 196702, 2, 0, 327679, 2, 0, 262238, 2, 0, 393215, 2, 0, 327774, 2, 0, 458751, 2, 0, 393310, 2, 0, 524287, 2, 0, 458846, 2, 0, 589823, 2, 0, 524382, 2, 0, 655359, 2, 0, 589918, 2, 0, 720895, 2, 0, 655454, 2, 0, 786431, 2, 0, 720990, 2, 0, 851967, 2, 0, 786526, 2, 0, 917503, 2, 0, 852062, 2, 0, 983039, 2, 0, 917598, 2, 0, 1048575, 2, 0, 983134, 2, 0, 983135, 2, 0, 983136, 2, 0, 1114111, 2, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1048618, 0, 0, 1048619, 0, 0, 1048620, 0, 0, 1048621, 0, 0, 1048622, 0, 0, 1048623, 0, 0, 1048624, 0, 0, 1048625, 0, 0, 1048626, 0, 0, 1048627, 0, 0, 1048628, 0, 0, 1048629, 0, 0, 1048630, 0, 0, 1048631, 0, 0, 1048632, 0, 0, 1048633, 0, 0, 1048634, 0, 0, 1048635, 0, 0, 1048636, 0, 0, 1048637, 0, 0, 1048638, 0, 0, 1048639, 0, 0, 1048640, 0, 0, 1048641, 0, 0, 1048642, 0, 0, 1048643, 0, 0, 1048644, 0, 0, 1048645, 0, 0, 1048646, 0, 0, 1048647, 0, 0, 1048648, 0, 0, 1048649, 0, 0, 1048650, 0, 0, 1048651, 0, 0, 1048652, 0, 0, 1048653, 0, 0, 1048654, 0, 0, 1048655, 0, 0, 1048656, 0, 0, 1048657, 0, 0, 1048658, 0, 0, 1048659, 0, 0, 1048660, 0, 0, 1048661, 0, 0, 1048662, 0, 0, 1048663, 0, 0, 1048664, 0, 0, 1048665, 0, 0, 1048666, 0, 0, 1048667, 0, 0, 1048668, 0, 0, 1048669, 0, 0, 1048670, 0, 0, 1048671, 0, 0, 1048672, 2, 0, 1179647, 2, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1114140, 1, 0, 1114141, 1, 0, 1114142, 1, 0, 1114143, 1, 0, 1114144, 1, 0, 1114145, 1, 0, 1114146, 1, 0, 1114147, 1, 0, 1114148, 1, 0, 1114149, 1, 0, 1114150, 1, 0, 1114151, 1, 0, 1114152, 1, 0, 1114153, 1, 0, 1114154, 1, 0, 1114155, 1, 0, 1114156, 1, 0, 1114157, 1, 0, 1114158, 1, 0, 1114159, 1, 0, 1114160, 1, 0, 1114161, 1, 0, 1114162, 1, 0, 1114163, 1, 0, 1114164, 1, 0, 1114165, 1, 0, 1114166, 1, 0, 1114167, 1, 0, 1114168, 1, 0, 1114169, 1, 0, 1114170, 1, 0, 1114171, 1, 0, 1114172, 1, 0, 1114173, 1, 0, 1114174, 1, 0, 1114175, 1, 0, 1114176, 1, 0, 1114177, 1, 0, 1114178, 1, 0, 1114179, 1, 0, 1114180, 1, 0, 1114181, 1, 0, 1114182, 1, 0, 1114183, 1, 0, 1114184, 1, 0, 1114185, 1, 0, 1114186, 1, 0, 1114187, 1, 0, 1114188, 1, 0, 1114189, 1, 0, 1114190, 1, 0, 1114191, 1, 0, 1114192, 1, 0, 1114193, 1, 0, 1114194, 1, 0, 1114195, 1, 0, 1114196, 1, 0, 1114197, 1, 0, 1114198, 1, 0, 1114199, 1, 0, 1114200, 1, 0, 1114201, 1, 0, 1114202, 1, 0, 1114203, 1, 0, 1114204, 1, 0, 1114205, 1, 0, 1114206, 1, 0, 1114207, 1, 0, 1114208, 2, 0 )

[node name="LargeCandle" parent="." instance=ExtResource( 6 )]
position = Vector2( 390, 589 )
scale = Vector2( 2, 2 )

[node name="LargeCandle2" parent="." instance=ExtResource( 6 )]
position = Vector2( 902, 589 )
scale = Vector2( 2, 2 )

[node name="LargeCandle3" parent="." instance=ExtResource( 6 )]
position = Vector2( 1417, 589 )
scale = Vector2( 2, 2 )

[node name="LargeCandle4" parent="." instance=ExtResource( 6 )]
position = Vector2( 1927, 589 )
scale = Vector2( 2, 2 )

[node name="LargeCandle5" parent="." instance=ExtResource( 6 )]
position = Vector2( 2434, 589 )
scale = Vector2( 2, 2 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 201, 723 )

[node name="Intro2" type="Sprite" parent="."]
position = Vector2( 2903.4, 662 )
scale = Vector2( 0.828957, 0.838494 )
texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2887, 775 )
shape = SubResource( 8 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
